; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/rockchip/extr_analogix_dp-rockchip.c_rockchip_dp_unbind.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/rockchip/extr_analogix_dp-rockchip.c_rockchip_dp_unbind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.rockchip_dp_device = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 (%struct.TYPE_4__*)* }

@ENODEV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.device*, %struct.device*, i8*)* @rockchip_dp_unbind to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rockchip_dp_unbind(%struct.device* %0, %struct.device* %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.rockchip_dp_device*, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.device* %1, %struct.device** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load %struct.device*, %struct.device** %4, align 8
  %9 = call %struct.rockchip_dp_device* @dev_get_drvdata(%struct.device* %8)
  store %struct.rockchip_dp_device* %9, %struct.rockchip_dp_device** %7, align 8
  %10 = load %struct.rockchip_dp_device*, %struct.rockchip_dp_device** %7, align 8
  %11 = getelementptr inbounds %struct.rockchip_dp_device, %struct.rockchip_dp_device* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = call i32 @analogix_dp_unbind(i32 %12)
  %14 = load %struct.rockchip_dp_device*, %struct.rockchip_dp_device** %7, align 8
  %15 = getelementptr inbounds %struct.rockchip_dp_device, %struct.rockchip_dp_device* %14, i32 0, i32 1
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i32 (%struct.TYPE_4__*)*, i32 (%struct.TYPE_4__*)** %18, align 8
  %20 = load %struct.rockchip_dp_device*, %struct.rockchip_dp_device** %7, align 8
  %21 = getelementptr inbounds %struct.rockchip_dp_device, %struct.rockchip_dp_device* %20, i32 0, i32 1
  %22 = call i32 %19(%struct.TYPE_4__* %21)
  %23 = load i32, i32* @ENODEV, align 4
  %24 = sub nsw i32 0, %23
  %25 = call i32 @ERR_PTR(i32 %24)
  %26 = load %struct.rockchip_dp_device*, %struct.rockchip_dp_device** %7, align 8
  %27 = getelementptr inbounds %struct.rockchip_dp_device, %struct.rockchip_dp_device* %26, i32 0, i32 0
  store i32 %25, i32* %27, align 8
  ret void
}

declare dso_local %struct.rockchip_dp_device* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @analogix_dp_unbind(i32) #1

declare dso_local i32 @ERR_PTR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
